# dense_retrieval

./: .gitignore
dense_retrieval/: arguments.py  data.py  hello.py  pyproject.toml  ruff.toml  train_repllama.py
dense_retrieval/bi_encoder/: data.py  data_utils.py  train.py  train_repllama.py
dense_retrieval/notebooks/: finetuning_llama3_for_classification.ipynb  repllama.ipynb
